tests/codeless_suppression/codeless_suppression.exp
Error ----------------------------------------------------------------------------------------------------- test.js:13:1

Suppression contains a malformed error code. Suppressions with error codes should be formatted as `$FlowFixMe[<CODE>]`.

   13| // $FlowFixMe[]
       ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:14:2

Cannot cast `3` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:14:2
   14| (3: string);
        ^ [1]

References:
   test.js:14:5
   14| (3: string);
           ^^^^^^ [2]



Found 2 errors
